[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/bad_icon.png" type="Texture" id=1]
[ext_resource path="res://World/Exit.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 27, 23, 3, 3 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 6, 11, 3, 3 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "focus",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 3.42308, 3.42308 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 3, 3 )

[node name="Exit" type="StaticBody2D"]
scale = Vector2( 2.7, 2.7 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "normal"

[node name="DetectableArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectableArea"]
shape = SubResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )

[node name="ExitLabel" type="Label" parent="."]
margin_left = -3.33333
margin_top = -1.0
margin_right = 34.6667
margin_bottom = 13.0
rect_scale = Vector2( 0.16, 0.16 )
text = "Finish"

[node name="NotFinished" type="Label" parent="."]
visible = false
margin_left = -17.6667
margin_top = -6.0
margin_right = 203.333
margin_bottom = 8.0
rect_scale = Vector2( 0.16, 0.16 )
text = "You haven't collected all the items"

[connection signal="body_entered" from="DetectableArea" to="." method="_on_DetectableArea_body_entered"]
[connection signal="body_exited" from="DetectableArea" to="." method="_on_DetectableArea_body_exited"]
